<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:padding="16dp"
    android:gravity="center">

    <!-- Título -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pico_botella"
        android:textColor="#FF3D00"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <!-- Campo de Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextColor="@android:color/white"
        app:boxStrokeColor="@android:color/white"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:hintTextColor="@android:color/white"
        app:boxStrokeColor="@android:color/white"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón de Login -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0.5"
        android:backgroundTint="#FF9800"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registrarse"
        android:textColor="#9EA1A1"
        android:textSize="16sp"
        android:textStyle="normal"
        android:clickable="true"
        android:focusable="true" />

    <!-- Espaciador -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Imagen de onda -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/bot_n_de_atr_s"
        android:src="@drawable/vd_vector"
        android:scaleType="fitXY" />


</LinearLayout>
